# job-management-portal

./: README.md  pyproject.toml
app/accounts/: admin.py  managers.py  models.py
app/accounts/migrations/: 0001_initial.py  0002_user_expected_salary_user_experience_and_more.py  0003_alter_user_expected_salary.py  0004_alter_user_expected_salary.py  0005_alter_user_last_education.py
app/common/: choices.py  models.py
app/jobs/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app/jobs/migrations/: 0001_initial.py  0002_alter_job_options_alter_job_requirements_and_more.py  0003_alter_application_expected_salary_and_more.py  0004_alter_application_expected_salary_and_more.py  0005_alter_application_expected_salary_and_more.py  0006_alter_job_schooling.py  0007_alter_application_expected_salary_and_more.py  0008_alter_application_expected_salary_and_more.py  0009_alter_application_expected_salary.py
app/jobs/templates/jobs/: base.html  create-record.html  dashboard.html  index.html  my-login.html  navbar.html  register-candidate.html  register-company.html  update-record.html  view-candidates.html  view-record.html
config/: asgi.py  urls.py  wsgi.py
config/settings/: settings.py
